Finished last discussion question

--- a/resent.ipynb
+++ b/resent.ipynb
@@ -458,7 +458,6 @@
     "        self.num_layers = num_layers\n",
     "        super(ResNet, self).__init__()\n",
     "        self.conv1 = nn.Conv2d(1, 1, 3, padding = 1)\n",
-    "        #self.linearization1 = nn.Linear(28,28)\n",
     "        self.linearization2 = nn.Linear(5*26*26,10)\n",
     "        self.convout = nn.Conv2d(1, 5, 3)\n",
     "        self.linears = nn.ModuleList([nn.Linear(28,28)])\n",
@@ -559,7 +558,7 @@
     "  a. Degredation problem\n",
     "  b. computational power\n",
     "  c. large enough dataset\n",
-    "  d. \n",
+    "  d. regularization - while there are currently lots of techniques for this, it is unclear how well they would work on extremely deep nets (e.g. the 1000 something layer deep convNet they present in the paper)\n",
     "\n",
     "3. In terms of how a given block of a network is \"fitted\", what is the key difference between using skip connections and traditional blocks?\n",
     "\n",
